correction de z-index sur connexionPopup

--- a/src/components/ConnexionPopup/connexionPopup.scss
+++ b/src/components/ConnexionPopup/connexionPopup.scss
@@ -12,7 +12,7 @@
 	position: fixed;
 	top: 20%;
 	left: 20%;
-	z-index: 99;
+	z-index: 2000;
 }
 
 .form__h1,
@@ -107,7 +107,7 @@
 	position: fixed;
 	top: 28%;
 	left: 30%;
-	z-index: 99;
+	z-index: 2000;
 }
 
 .form__h1 {
